--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-router-app",
+  "name": "red-ball-studio-app",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,14 +9,17 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.3",
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.0",
     "react-router": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
