--- a/vercel/output/config.json
+++ b/vercel/output/config.json
@@ -14,7 +14,7 @@
       "dest": "/redball.png"
     },
     {
-      "src": "under-construction.jpeg",
+      "src": "/under-construction.jpeg",
       "dest": "/under-construction.jpeg"
     },
     {
